# sd

./: Copy (2) of sdtand.cpp  Copy (3) of sdtand.cpp  Copy of sdtand.cpp  Edit sd.ini.lnk  INSTALL  Imakefile  MacSd.p.Hqx  MacSd.p.rsrc.Hqx  MacSd.pr.Hqx  MacSd.pr.rsrc.Hqx  Macwdef.pr.Hqx  Makefile  Makefile.bak  Makefile.in  README  Relnotes  Relnotes.bak  Relnotes.mac  SD couple.lnk  SD nocheckers.lnk  SD plain.lnk  SD.lnk  SDTTY plain.lnk  SDTTY.PIF  SDTTY.lnk  Sd.ad  Sd.res  all.dsp  basetype.h  broken.cpp  colortest.cmd  common.cpp  configure  configure.in  copymsvc.cmd  database.doc  database.h  db_doc.txt  dbcomp.c  dbcomp.cpp  (+194 more)
