AC_REVISION(Time-stamp: "94/07/28 01:12:58 gildea")dnl
# configure script for Sd (square dance caller's helper)
#
# options:
#    --with-warnings: of interest to developers only
#		(not implemented for all compilers)
#    --with-pc: generate makefile for use on IBM-PC running DOS
#		with dmake and djgpp C compiler
#
AC_INIT(sdmain.c)
CONFIG_FILES=Makefile

[#] See if this is a build with djgpp for a PC.

AC_WITH(pc,[
dnl Make the PC makefile have a different name if called from Makefile.
test -r makefile.pc.in && CONFIG_FILES=makefile.pc
echo "making ${CONFIG_FILES} for djgpp on a PC"
[#] ****** Beginning of PC section ******
SDTTY_OBJ="$(SDTTY_OBJ_PC)"
[#] DOS can't handle long command lines
SDTTY_OBJS="@pcfiles.lnk"
CC=gcc
CDEBUGFLAGS=-O
DEFS=
TTY_FLAGS=
TTY_LIBS=-lpc
X11_LIBS=
LN_S="ln -s"
dnl those are Tab characters in the next two lines
STRIP="	strip \$@"
AOUT2EXE="	aout2exe \$@"
AC_SUBST(STRIP)dnl
AC_SUBST(AOUT2EXE)dnl
DEFAULT_TARGET=alltty
dnl This rule is for dmake on DOS, in case not installed for djgpp
[#] ****** End of PC section ******
],
[
[#] ****** Beginning of Unix section ******
echo "making ${CONFIG_FILES} for Unix"
AC_CHECKING(for compiler type)

AC_GCC_TRADITIONAL
CDEBUGFLAGS=-O

[#] If we didn't get gcc, look for other compilers.  Set CDEBUGFLAGS appropriately.
[#] In any case, deal with the "with-warnings" switch.

if test -n "$GCC"; then
  AC_WITH(warnings, CC="$CC -Wall -Wno-switch -Wno-implicit -Wno-parentheses -Wshadow -Wpointer-arith")
else
  AC_VERBOSE(not using gcc: looking for other compilers)
  AC_CHECKING(for HP compiler)
  AC_PROGRAM_EGREP(yes,
[#ifdef __hpux
yes
#endif],CC="$CC -Aa -z +DA1.1 -D_AES_SOURCE"
  DEFS="+O3 +Obb750"
  [AC_WITH(warnings, CC="$CC +w1")
   CDEBUGFLAGS="$DEFS"
   DEFS=])
fi

[#] Now CC should contain compiler invocation string, with switches.
[#] CDEBUGFLAGS should contain optimization/debug switches.

AC_VERBOSE(got compiler type)

AC_CHECKING(whether -I$srcdir is needed)
AC_TEST_CPP([#include "sd.h"], , DEFS="$DEFS -I$srcdir")

[#] Begin X11 investigation.

AC_FIND_X
if test -n "$x_includes"; then
  X11_FLAGS="-I$x_includes"
fi
if test -n "$x_libraries"; then
  x_flags="-L$x_libraries"
fi
if test -n "$no_x"; then
  echo "note: cannot find X11 headers and libraries"
fi
dnl for SVR4, check for existence of these libraries, add them to LIBS if found
AC_HAVE_LIBRARY(socket, LIBS="$LIBS -lsocket")
AC_HAVE_LIBRARY(nsl, LIBS="$LIBS -lnsl")

X11_LIBS="$x_flags -lXaw -lXmu -lXt -lXext -lX11 $LIBS"

if test -n "$x_libraries"; then
  dnl SunOS 5 needs -R with shared libraries
  AC_CHECKING(whether -R$x_libraries is needed)
  LIBS="$X11_LIBS"
  AC_TEST_PROGRAM([main(){XDisplayName(0); exit(0);}],
    ,[# losing, try adding -R
    LIBS="$LIBS -R$x_libraries"
    AC_TEST_PROGRAM([main(){XDisplayName(0); exit(0);}]
    ,[echo "your system requires the non-standard -R argument; my condolences"
     X11_LIBS="$X11_LIBS -R$x_libraries"])])
fi

[#] End of X11 investigation, begin curses investigation.

AC_CHECKING(for curses include files and libraries ...)

[#] We do NOT simply search for the existence of directories /usr/5include
[#] or /usr/5lib.  The standards (OSF and SysV) simply say that the curses
[#] service is supposed to work.  Naturally.  With the obvious include files,
[#] in the obvious places.  They don't say anything about requiring that the
[#] files /usr/5include/curses.h or /usr/5lib/libcurses.a *NOT* exist.  If we
[#] searched for the existence of those files, then a totally compliant system
[#] in which /usr/5include/curses.h was a link to /etc/passwd would fail.
[#] So we first test for conformance to the SysV or OSF standards.
[#] Only if that fails do we assume we are on a non-standards-compliant
[#] system (e.g. SunOS) and look for the other directories.  If that fails,
[#] we shut off curses completely.
[#]
[#] It happens that SunOS appears superficially to comply with the curses
[#] standard when the natural directories are used.  It has all the necessary
[#] files.  The problem is that, when sdtty is compiled for SunOS, we get
[#] these undefined globals:  __tty, __tty_ch, __echoit, and __rawmode.
[#] We assume they are requested by some functions that sdtty uses, but we
[#] don't know which ones.  So we apply a very rigorous and thorough test
[#] of the curses service, in which we check that every function that sdtty
[#] is known to use can be compiled and linked without error, including that
[#] insidious and revolting macro "getyx".
[#] That is why the test below is such a mess.

CFLAGS=""
LIBS="-lcurses"
curses_prog='
#include <curses.h>
#include <unistd.h>
int ly, lx;
initscr();            noecho();   cbreak();         scrollok(stdscr, LINES);
idlok(stdscr, TRUE);  endwin();   (void) getch();   clrtoeol();
clrtobot();           refresh();  move(1, 2);       addstr((char *) 0);
getstr((char *) 0);   addch(3);   beep();           getyx(stdscr, ly, lx);
'
AC_COMPILE_CHECK([library in normal location], , [$curses_prog],
    got_curses_libs=1)

if test -z "$got_curses_libs"; then
  CFLAGS="-I/usr/5include"
  LIBS="-L/usr/5lib -lcurses"
  AC_COMPILE_CHECK([library in /usr/5lib], , [$curses_prog],
    got_curses_libs=1)
fi

if test -z "$got_curses_libs"; then
  echo "********************************************************************"
  echo "* NOTE: Not able to build curses programs, disabling curses.       *"
  echo "* Sdtty will always behave as if the \"-no_cursor\" switch given.    *"
  echo "********************************************************************"
  CFLAGS="-DNO_CURSES"
  LIBS=""
fi

dnl can add tests for additional library directories here
dnl OSF/1 might put it in /usr/ccs/lib

TTY_FLAGS="$CFLAGS"
TTY_LIBS="$LIBS"
SDTTY_OBJ="$(SDTTY_OBJ_UNIX)"
SDTTY_OBJS="$(SD_OBJS) $(SDTTY_OBJ)"

dnl This will set the definition of "LN_S".
AC_LN_S

dnl since user chose configure over xmkmf, lean towards non-X
if test -z "$no_x" -a -n "$DISPLAY"; then
  DEFAULT_TARGET=allx11
else
  DEFAULT_TARGET=alltty
fi

[#] ****** End of Unix section ******
])

echo "compilation settings are as follows:"
echo "  compiler invocation (CC) = $CC"
echo "  general compilation flags (DEFS) = $DEFS"
echo "  extra flags for optimization/debug (CDEBUGFLAGS) = $CDEBUGFLAGS"
echo "  extra flags for compiling sdui-x11.c (X11_FLAGS) = $X11_FLAGS"
echo "  extra flags for compiling sdui-ttu.c (TTY_FLAGS) = $TTY_FLAGS"
echo "  flags for linking X11 (X11_LIBS) = $X11_LIBS"
echo "  flags for linking sdtty (TTY_LIBS) = $TTY_LIBS"

AC_SUBST(CONFIG_FILES)dnl
AC_SUBST(CC)dnl
AC_SUBST(CDEBUGFLAGS)dnl
AC_SUBST(DEFS)dnl
AC_SUBST(X11_FLAGS)dnl
AC_SUBST(X11_LIBS)dnl
AC_SUBST(TTY_FLAGS)dnl
AC_SUBST(TTY_LIBS)dnl
dnl
AC_SUBST(LN_S)dnl
AC_SUBST(SDTTY_OBJ)dnl
AC_SUBST(SDTTY_OBJS)dnl
AC_SUBST(DEFAULT_TARGET)dnl
dnl
AC_OUTPUT(Makefile)dnl
